# app-qxd-backend

./: .gitignore  pyproject.toml
app/: clean_pycache.py  init_db.py  main.py  test.py  test2.py
app/agents/: __init__.py  ma_agents.py
app/agents/tools/: __init__.py  ma_tools.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: chat.py  login.py  projects.py  projectsOG.py  riddle.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  base_gdb.py  crud_agtable.py  crud_gdb.py  crud_project.py  crud_table.py  crud_token.py  crud_user.py
app/db/: __init__.py  base.py  base_class.py  dummy_db.json  dummy_db.py  dummy_table_db.json  dummy_table_db.py  ma_db_init.py  session.py
app/dummy/: __init__.py  dummy_data_gen.py
app/gdb/: __init__.py  session.py
app/llm/: __init__.py  claude_api.py  groq_api.py  jina_api.py  openai_api.py
app/models/: __init__.py  agtable.py  project.py  table.py  token.py  user.py
app/prompts/: __init__.py  modernawards.py
app/schemas/: __init__.py  agtable.py  base_schema.py  project.py  table.py  token.py  totp.py  user.py
