[tool.poetry]
name = "app-qxd-backend"
version = "0.1.0"
description = ""
authors = ["qxd"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
openai = "^1.35.13"
groq = "^0.9.0"
anthropic = "^0.31.0"
uvicorn = "^0.30.1"
neo4j = "^5.22.0"
pymupdf = "^1.24.7"
asyncpg = "^0.29.0"
asyncio = "^3.4.3"
python-multipart = "^0.0.9"
tenacity = "^8.5.0"
python-jose = "^3.3.0"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
passlib = "^1.7.4"
greenlet = "^3.0.3"
argon2-cffi = "^23.1.0"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
